# chess-ai-kiro

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  SETUP_COMPLETE.md  pyproject.toml  requirements.txt  scripts.ps1  启动截屏GUI.bat
.kiro/settings/: mcp.json
.kiro/specs/chess-board-recognition/: design.md  requirements.md  tasks.md
.kiro/specs/chinese-chess-ai-engine/: design.md  requirements.md  tasks.md
.kiro/specs/real-time-analysis-system/: requirements.md  tasks.md
.kiro/steering/: auto-context7.md  chess-ai-project-context.md  download.md  environment.md  language.md  product.md  structure.md  task-execution-guidelines.md  tech.md
.uv/: config.toml
chess_ai_project/: __init__.py  main.py
chess_ai_project/configs/: chess_board_recognition.yaml  classes.txt  default.yaml
chess_ai_project/configs/chess_board_recognition/: config.yaml
chess_ai_project/configs/chinese_chess_ai_engine/: ai_config.yaml  default_config.yaml  game_config.yaml  mcts_config.yaml  model_config.yaml  system_config.yaml  training_config.yaml
chess_ai_project/configs/real_time_analysis_system/: .gitkeep
chess_ai_project/docs/chinese_chess_ai_engine/: task1_summary.md
chess_ai_project/src/: __init__.py
chess_ai_project/src/chess_board_recognition/: __init__.py  demo.py  main.py
chess_ai_project/src/chess_board_recognition/core/: __init__.py  config.py  interfaces.py  logger.py
chess_ai_project/src/chess_board_recognition/data_collection/: __init__.py  capture_gui.py  demo_capture.py  launch_capture_gui.py  region_selector.py  screen_capture.py
chess_ai_project/src/chess_board_recognition/data_processing/: __init__.py  annotation_validator.py  data_augmentation.py  data_manager.py  quality_controller.py
chess_ai_project/src/chess_board_recognition/inference/: __init__.py  board_mapper.py  chessboard_detector.py  mock_config.py  result_processor.py
chess_ai_project/src/chess_board_recognition/system_management/: __init__.py  config_manager.py  logger.py  model_manager.py  performance_monitor.py
chess_ai_project/src/chess_board_recognition/training/: __init__.py  config_validator.py  evaluator.py  hyperparameter_optimizer.py  model_exporter.py  monitor.py  optimization_script.py  train_script.py  trainer.py
chess_ai_project/src/chinese_chess_ai_engine/: __init__.py  demo_core_models.py  demo_model_inference.py  main.py
chess_ai_project/src/chinese_chess_ai_engine/config/: __init__.py  config_manager.py  model_config.py
chess_ai_project/src/chinese_chess_ai_engine/inference_interface/: __init__.py  api_server.py  chess_ai.py  game_interface.py
chess_ai_project/src/chinese_chess_ai_engine/neural_network/: __init__.py  chess_net.py  feature_encoder.py  inference_engine.py  model_manager.py
chess_ai_project/src/chinese_chess_ai_engine/rules_engine/: __init__.py  board_validator.py  chess_board.py  move.py  rule_engine.py
chess_ai_project/src/chinese_chess_ai_engine/search_algorithm/: __init__.py  mcts_node.py  mcts_searcher.py  parallel_searcher.py  search_optimizer.py  time_manager.py
chess_ai_project/src/chinese_chess_ai_engine/training_framework/: __init__.py  board_encoder.py  model_evaluator.py  self_play_generator.py  trainer.py  training_config.py  training_example.py
chess_ai_project/src/chinese_chess_ai_engine/utils/: __init__.py  exceptions.py  logger.py
chess_ai_project/src/real_time_analysis_system/: __init__.py  main.py
chess_ai_project/tests/: __init__.py  test_basic.py
chess_ai_project/tests/chess_board_recognition/: __init__.py  test_config_validator.py  test_core.py  test_data_augmentation.py  test_data_processing.py  test_hyperparameter_optimizer.py  test_inference_engine.py  test_model_evaluator.py  test_model_exporter.py  test_screen_capture.py  test_training_module.py  test_training_module_mock.py
chess_ai_project/tests/chinese_chess_ai_engine/: __init__.py  test_api_server.py  test_chess_ai.py  test_chess_board.py  test_core_models.py  test_game_interface.py  test_inference_engine.py  test_mcts.py  test_model_evaluator.py  test_model_manager.py  test_neural_network.py  test_rule_engine.py  test_search_optimization.py  test_trainer.py  test_training_framework.py
chess_ai_project/tests/real_time_analysis_system/: __init__.py
data/: region_config.json
docs/: screen_capture_guide.md  task_2_1_completion_summary.md
docs/chess_board_recognition/: capture_gui_guide.md  data_processing.md  screen_capture_guide.md  training_module_guide.md
docs/chinese_chess_ai_engine/: .gitkeep  api_server_guide.md
docs/real_time_analysis_system/: .gitkeep
